--- a/src/styles/works.css
+++ b/src/styles/works.css
@@ -66,7 +66,7 @@
   user-select: none;
   border-radius: 15px;
   border: 1.6px solid #fafafa;
-  opacity: 0.5;
+  opacity: 0.7;
   background: rgba(255, 255, 255, 0.5);
   -webkit-backdrop-filter: blur(40px);
   backdrop-filter: blur(40px);
